--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'American periodicals'
 - !lcc 'AP'
+- GITenberg
 title: "The Atlantic Monthly, Volume 18, No. 108, October, 1866\r\nA Magazine of Literature,\
   \ Science, Art, and Politics"
 url: http://www.gutenberg.org/ebooks/25216
